--- a/landingpage2.html
+++ b/landingpage2.html
@@ -9,14 +9,14 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-    <link rel="stylesheet" href="./styles2.css" />
+    <link rel="stylesheet" href="styles2.css" />
   </head>
   <body>
     <section class="header-seccion_1">
       <div class="background-header"></div>
       <header>
         <nav class="menu">
-          <img class="swipe" src="./assets/logo-white.svg" alt="logo" />
+          <img class="swipe" src="assets/logo-white.svg" alt="logo" />
           <span class="material-symbols-outlined">menu</span>
           <ul class="menulist">
             <li><a class="letter" href="#">Products</a></li>
@@ -44,48 +44,42 @@
                 Start now
                 <img
                   class="arrow"
-                  src="/assets/arrow-right-light.svg"
+                  src="assets/arrow-right-light.svg"
                   alt="Start now"
                 />
               </button>
-
               <button class="button-end animation-arrow">
                 Contact sales
                 <img
                   class="arrow"
-                  src="/assets/arrow-right-purple.svg"
+                  src="assets/arrow-right-purple.svg"
                   alt="Contact sales"
                 />
               </button>
             </div>
           </div>
-          <img
-            class="img-hero"
-            src="./assets/hero-phone.png"
-            alt="image-phone"
-          />
+          <img class="img-hero" src="assets/hero-phone.png" alt="image-phone" />
         </div>
       </div>
-
       <div class="contenedorimg">
         <div class="seccioneslogos">
           <div class="logosimg">
             <img
               class="sponsors-logo"
-              src="/assets/instacart.png"
+              src="assets/instacart.png"
               alt="instacart"
             />
             <img
               class="sponsors-logo"
-              src="/assets/salesforce.png"
+              src="assets/salesforce.png"
               alt="salesforce"
             />
-            <img class="sponsors-logo" src="/assets/amazon.png" alt="amazon" />
-            <img class="sponsors-logo" src="/assets/slack.png" alt="slack" />
-            <img class="sponsors-logo" src="/assets/shopify.png" alt="" />
-            <img class="sponsors-logo" src="/assets/google.png" alt="google" />
-            <img class="sponsors-logo" src="/assets/lyft.png" alt="lyft" />
-            <img class="sponsors-logo" src="/assets/zoom.png" alt="zoom" />
+            <img class="sponsors-logo" src="assets/amazon.png" alt="amazon" />
+            <img class="sponsors-logo" src="assets/slack.png" alt="slack" />
+            <img class="sponsors-logo" src="assets/shopify.png" alt="" />
+            <img class="sponsors-logo" src="assets/google.png" alt="google" />
+            <img class="sponsors-logo" src="assets/lyft.png" alt="lyft" />
+            <img class="sponsors-logo" src="assets/zoom.png" alt="zoom" />
           </div>
         </div>
       </div>
