Creacion de la seccion 2 y ajustes de responsive para pantallas mas grandes

--- a/landingpage2.html
+++ b/landingpage2.html
@@ -12,8 +12,10 @@
     <link rel="stylesheet" href="styles2.css" />
   </head>
   <body>
-    <section class="header-seccion_1">
+    <!-- SECTION 1 -->
+    <section class="header-section_1">
       <div class="background-header"></div>
+      <div class="general-container">
       <header>
         <nav class="menu">
           <img class="swipe" src="assets/logo-white.svg" alt="logo" />
@@ -76,7 +78,7 @@
             />
             <img class="sponsors-logo" src="assets/amazon.png" alt="amazon" />
             <img class="sponsors-logo" src="assets/slack.png" alt="slack" />
-            <img class="sponsors-logo" src="assets/shopify.png" alt="" />
+            <img class="sponsors-logo" src="assets/shopify.png" alt="Shopify" />
             <img class="sponsors-logo" src="assets/google.png" alt="google" />
             <img class="sponsors-logo" src="assets/lyft.png" alt="lyft" />
             <img class="sponsors-logo" src="assets/zoom.png" alt="zoom" />
@@ -84,5 +86,43 @@
         </div>
       </div>
     </section>
+    <!-- SECTION 2 -->
+    <section class="unified-section_2">
+        <div class="section-container">
+          <p class="unified-paragraph">Unified platform</p>
+          <h2 class="payment-products_title">All the payment products you'll ever need</h2>
+          <div class="two-column">
+            <div class="col-left">
+              <p class="one-paragraph">
+              We've got everything you'll need and more to build websites and
+              apps that handle payments, payouts, and much more. Swipe’s
+              products power payments for<a class="purple-font" href="#"> all kinds of retailers</a>,<a class="purple-font" href="#"> all kinds of
+              businesses</a>,<a class="purple-font" href="#"> software platforms & marketplaces</a>, and everything in between.
+              </p>
+            </div>
+            <div class="col-right">
+              <p class="two-paragraph">
+              We also help companies<a class="purple-font" href="#"> tackle fraud</a>,<a class="purple-font" href="#"> issue invoices</a>,<a class="purple-font" href="#"> send virtual and
+              physical cards</a>,<a class="purple-font" href="#"> manage financing</a>,<a class="purple-font" href="#"> wrangle business spend</a>, and much more.
+              </p>
+            </div>
+          </div>
+            <button class="button-start_now">Start now <img class="arrow-two"
+              src="assets/arrow-right-light.svg"
+              alt="Start now"
+            /></button>
+        </div>
+        <div class="images">
+          <div class="card-phone">
+            <img class="credit-card"src="/assets/credit-card.png" alt="Credit-card">
+            <img class="phone" src="/assets/phone.png" alt="Phone">
+          </div>
+          <div class="invoice-dash">
+            <img class="invoice" src="/assets/slack-invoice.png" alt="Slack-Invoice">
+            <img class="dash" src="/assets/dash.png" alt="Dash">
+          </div>
+        </div>
+    </section>
+  </div>
   </body>
 </html>
