Se realiza ajuste de background para la segunda seccion ya que en pantallas mas grandes no se extedia como debia

--- a/landingpage2.html
+++ b/landingpage2.html
@@ -87,6 +87,7 @@
       </div>
     </section>
     <!-- SECTION 2 -->
+    <div class="background-section_2">
     <section class="unified-section_2">
         <div class="section-container">
           <p class="unified-paragraph">Unified platform</p>
@@ -124,6 +125,5 @@
         </div>
     </section>
   </div>
- 
   </body>
 </html>
