guardando cambios realizados en la rama 3 para actualiazar cambios de la rama 2

--- a/landingpage2.html
+++ b/landingpage2.html
@@ -87,6 +87,7 @@
       </div>
     </section>
     <!-- SECTION 2 -->
+    <div class="background-section_2">
     <section class="unified-section_2">
         <div class="section-container">
           <p class="unified-paragraph">Unified platform</p>
@@ -123,7 +124,9 @@
           </div>
         </div>
       </section>
+    </div>
   <!-- SECTION 3 -->
+  <div class="background-2_3">
   <section class="designed-for_engineers_3">
     <div class="background-blue">
     <div class="designed">
@@ -157,5 +160,6 @@
     </div>
     </div>
   </section>
+</div>
   </body>
 </html>
