--- a/landingpage2.html
+++ b/landingpage2.html
@@ -85,7 +85,8 @@
           </div>
         </div>
       </div>
-    </section>
+     </section>
+  </div>
     <!-- SECTION 2 -->
     <div class="background-section_2">
     <section class="unified-section_2">
@@ -136,21 +137,21 @@
       <p class="abstract-paragraph">We abstract the hard stuff away so your teams don't can focus on building good technology,
         instead of spending time and money reinventing the wheel.
       </p>
-      <button class="start-now3">Start now <img src="assets/arrow-right-dark.svg" alt="Start-now"></button>
+      <button class="start-now3">Start now <img class="arrow-three" src="assets/arrow-right-dark.svg" alt="Start-now"></button>
     <div class="two-columns_toolsCustom">
       <div class="img-container_designed">
       <img class="tools-custom" src="assets/tools-icon.png" alt="Tools">
       <h3 class="title-3">Tools for all stacks</h3>
       <p class="secondary-text">We offer front end and back end libraries in some of the most
         widely used technologies, old and new.</p>
-      <button class="buttons-3">See libraries <img src="assets/arrow-right-blue.svg" alt="See-libraries"></button>
+      <button class="buttons-3 animation-btn3">See libraries <img class="arrow-four" src="assets/arrow-right-blue.svg" alt="See-libraries"></button>
     </div>
     <div class="img-container_designed">
       <img class="tools-custom" src="assets/cube-icon.png" alt="Custom">
       <h3 class="title-3">Custom Integrations</h3>
       <p class="secondary-text">Use integrations for systems like Shopify, WooCommerce, NetSuite,
         and more.</p>
-        <button class="buttons-3">Explore partners <img src="assets/arrow-right-blue.svg" alt="Explore-partners"></button>
+        <button class="buttons-3 animation-btn3">Explore partners <img class="arrow-four" src="assets/arrow-right-blue.svg" alt="Explore-partners"></button>
     </div>
   </div>
   </div>
