Se realiza seccion 03 de la landing page

--- a/landingpage2.html
+++ b/landingpage2.html
@@ -160,6 +160,7 @@
         <img class="img-code_terminal" src="assets/terminal-code.png" alt="Terminal-code">
     </div>
     </div>
+  </div>
   </section>
 </div>
   </body>
