--- a/landingpage2.html
+++ b/landingpage2.html
@@ -165,10 +165,10 @@
 </div>
 <!-- SECTION 4 -->
 <section class="why-swipe">
-<div class="section-container_whyswipe"> 
+  <div class="section-container_whyswipe"> 
   <p class="subtitle3">Why Swipe</p>
   <h2 class="tech-first">A tech-first approach to finance</h2>
-  <div class="container-paragraphs_4">
+  <div class="container-general_4">
     <div class="efficient">
       <img class="img-section_4" src="assets/cloud-icon.png" alt="Efficient-Always">
       <h3>Efficient Always</h3>
@@ -189,7 +189,7 @@
       <h3>Crazy Optimized</h3>
       <p class="paragraph-text">We use machine learning trained on billions of data points to help optimize all products, from fraud to revenue recovery and more.</p>
     </div>
-  </div>
+</div>
 </div>
 </section>
   </body>
