--- a/landingpage2.html
+++ b/landingpage2.html
@@ -163,5 +163,34 @@
   </div>
   </section>
 </div>
+<!-- SECTION 4 -->
+<section class="why-swipe">
+  <div class="section-container_whyswipe"> 
+  <p class="subtitle3">Why Swipe</p>
+  <h2 class="tech-first">A tech-first approach to finance</h2>
+  <div class="container-general_4">
+    <div class="efficient">
+      <img class="img-section_4" src="assets/cloud-icon.png" alt="Efficient-Always">
+      <h3>Efficient Always</h3>
+        <p class="paragraph-text">We've optimized every level of the finance stack, from integrations to prebuilt checkout flows - no detail has been spared.</p>
+    </div>
+    <div class="fast">
+      <img class="img-section_4" src="assets/cycle-icon.png" alt="Fast-Improving">
+      <h3>Fast-Improving</h3>
+      <p class="paragraph-text">We make constant updates and improvements to help you stay on the cutting edge of your industry, deploying to production around 20X per day!</p>
+    </div>
+    <div class="tried">
+      <img class="img-section_4" src="assets/shield-icon.png" alt="Tried-and-true">
+      <h3>Tried and true</h3>
+      <p class="paragraph-text">Our systems operate with 100% uptime, with scalability and uptime as a guarantee. Swipe is super duper certified so don't worry</p>
+    </div>
+    <div class="crazy">
+      <img class="img-section_4" src="assets/bars-icon.png" alt="Crazy-Optimized">
+      <h3>Crazy Optimized</h3>
+      <p class="paragraph-text">We use machine learning trained on billions of data points to help optimize all products, from fraud to revenue recovery and more.</p>
+    </div>
+</div>
+</div>
+</section>
   </body>
 </html>
