Desarrollo de la seccion 5 falta solucionar background en 1366px

--- a/landingpage2.html
+++ b/landingpage2.html
@@ -192,5 +192,41 @@
 </div>
 </div>
 </section>
+<!-- SECTION 5 -->
+<section class="global-scale">
+<div class="background-5"></div>
+<div class="background-5_2">
+  <div class="container-general_5">
+    <div class="container-one_section5">
+      <div class="sub-container">
+        <p class="glo-scale">Global Scale</p>
+        <h2 class="title-a_structure">A structure for global businesses</h2>
+        <p class="swipe-makes" >Swipe makes moving money simple, borderless, and programmable - just like the rest of the
+          internet. We have teams all over the world and we process billions and billions of dollars
+          yearly for <a class="startups" href="#">startups, Fortune 500s, and everything in between.</a></p>
+     </div>
+    <img class="img-global" src="assets/global-graphic.png" alt="Global-Graphic">
+  </div>
+  <div class="container-two_card">
+    <div class="card">
+      <h3 class="number">250M+</h3>
+      <p class="paragraph-card">API requests each day, peaking at 15,000 requests a second.</p>
+    </div>
+    <div class="card">
+      <h3 class="number">97%</h3>
+      <p class="paragraph-card"> Of US adults have bought from businesses that use swipe</p>
+    </div>
+    <div class="card">
+      <h3 class="number">135+</h3>
+      <p class="paragraph-card">Currencies and payment methods supported</p>
+    </div>
+    <div class="card">
+      <h3 class="number">35+</h3>
+      <p class="paragraph-card">Countries with local, acquiring, optimizing acceptance rates</p>
+    </div>
+  </div>
+  </div>
+</div>
+</section>
   </body>
 </html>
