--- a/landingpage2.html
+++ b/landingpage2.html
@@ -192,5 +192,78 @@
 </div>
 </div>
 </section>
+<!-- SECTION 5 -->
+<section class="global-scale">
+<div class="background-5"></div>
+<div class="background-5_2">
+  <div class="container-general_5">
+    <div class="container-one_section5">
+      <div class="sub-container">
+        <p class="glo-scale">Global Scale</p>
+        <h2 class="title-a_structure">A structure for global businesses</h2>
+        <p class="swipe-makes" >Swipe makes moving money simple, borderless, and programmable - just like the rest of the
+          internet. We have teams all over the world and we process billions and billions of dollars
+          yearly for <a class="startups" href="#">startups, Fortune 500s, and everything in between.</a></p>
+     </div>
+    <img class="img-global" src="assets/global-graphic.png" alt="Global-Graphic">
+  </div>
+  <div class="container-two_card">
+    <div class="card">
+      <h3 class="number">250M+</h3>
+      <p class="paragraph-card">API requests each day, peaking at 15,000 requests a second.</p>
+    </div>
+    <div class="card">
+      <h3 class="number">97%</h3>
+      <p class="paragraph-card"> Of US adults have bought from businesses that use swipe</p>
+    </div>
+    <div class="card">
+      <h3 class="number">135+</h3>
+      <p class="paragraph-card">Currencies and payment methods supported</p>
+    </div>
+    <div class="card">
+      <h3 class="number">35+</h3>
+      <p class="paragraph-card">Countries with local, acquiring, optimizing acceptance rates</p>
+    </div>
+  </div>
+  </div>
+</div>
+</section>
+<!-- SECTION 6 -->
+<section class="virtual-events"></section>
+<div class="container-general_6">
+  <div class="column-one">
+   <div class="check">
+    <p class="paragraph-virtual">Virtual events</p>
+    <h2 class="sub-title_check">Check out Sessions now!</h2>
+    <p class="paragraph-swipe_06">Swipe Sessions is our annual conference - it's now available to watch on demand! Check it out and become an "internet economy" genius, and see how Swipe can transform the way you do business online.</p>
+     <button class="button-06 animation-btn6">Start now <img class="arrow-06" src="assets/arrow-right-light.svg" alt="arrow-ligth_06"></button> 
+   </div> 
+   <img class="img-sessions" src="assets/swipe-sessions.png" alt="Swipe-sessions">
+  </div>
+  <div class="column-two">
+    <div class="waiting-for">
+      <h2 class="sub-title_6">What are you waiting for?</h2>
+       <p class="paragraph-explore">Explore <a class="swipe-text" href="#"> Swipe</a> now, or create an account and start accepting payments today! If you need a custom package for your business, let's chat today.
+      </p> 
+      <button class="button-06 animation-btn6">Start now <img class="arrow-06" src="assets/arrow-right-light.svg" alt="arrow-light_06"></button>
+    </div>
+    <div class="sub-column_two">
+    <div class="always">
+      <img class="icon_06" src="assets/shield-icon.png" alt="Always">
+      <h3 class="subtitle_06">Always know what you pay</h3>
+      <p class="paragraph-integrated_get">Integrated per-transaction pricing with no hidden fees.
+      </p>
+      <button class="button-06_pricing_api animation-btn6">Pricing details <img class="arrow-06" src="assets/arrow-right-purple.svg" alt="Pricing-details"></button>
+    </div>
+    <div class="start">
+        <img class="icon_06" src="assets/bars-icon.png" alt="Start-your-integration">
+      <h3 class="subtitle_06">Start your integration</h3>
+       <p class="paragraph-integrated_get">Get up and running with Stripe in as little as 10 minutes.
+       </p>
+       <button class="button-06_pricing_api animation-btn6">Api reference <img class="arrow-06" src="assets/arrow-right-purple.svg" alt="Api-reference"> </button>
+    </div>
+    </div>
+  </div>
+</div>
   </body>
 </html>
