Se realiza el footer de la landing page swipe

--- a/landingpage2.html
+++ b/landingpage2.html
@@ -265,5 +265,52 @@
     </div>
   </div>
 </div>
+<!-- SECTION 7 -->
+<sEction>
+  <footer class="footer-7">
+    <div class="container-general_7">
+      <div class="logo-swipe_black">
+        <img src="assets/logo-dark.svg" alt="Swipe">
+        <ul class="list-general">
+          <li> <img class="icon-07_footer" src="assets/location-icon.png" alt="United-States"> <a class="list-7" href="#">United States</a></li>
+          <li> <img class="icon-07_footer" src="assets/comment-icon.png" alt="English-United-States"> <a class="list-7" href="#">English (United States)</a></li>
+        </ul>
+      </div>
+      <div class="products-7">
+        <h3 class="titles_7">Products</h3>
+        <ul class="list-general"> 
+          <li><a class="list-7" href="#">Atlas</a></li>
+          <li><a class="list-7" href="#">Billing</a></li>
+          <li><a class="list-7" href="#">Invoicing</a></li>
+          <li><a class="list-7" href="#">Payments</a></li>
+          <li><a class="list-7" href="#">Checkout</a></li>
+          <li><a class="list-7" href="#">Identity</a></li>
+        </ul>
+      </div>
+      <div class="use-cases">
+        <h3 class="titles_7">Use Cases</h3>
+        <ul class="list-general">
+          <li><a class="list-7" href="#">eCommerce</a></li>
+          <li><a class="list-7" href="#">SaaS</a></li>
+          <li><a class="list-7" href="#">Marketplace</a></li>
+          <li><a class="list-7" href="#">Embedded Finance</a></li>
+          <li><a class="list-7" href="#">Crypto</a></li>
+          <li><a class="list-7" href="#">Creator Economy</a></li>
+        </ul>
+      </div>
+      <div class="resources-7">
+        <h3 class="titles_7">Resources</h3>
+        <ul class="list-general">
+          <li><a class="list-7" href="#">Support Center</a></li>
+          <li><a class="list-7" href="#">Guides</a></li>
+          <li><a class="list-7" href="#">Blog</a></li>
+          <li><a class="list-7" href="#">Licenses</a></li>
+          <li><a class="list-7" href="#">Privacy & Terms</a></li>
+          <li><a class="list-7" href="#">Cookie Settings</a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
+</sEction>
   </body>
 </html>
